--- a/Fullstackpractical-6.html
+++ b/Fullstackpractical-6.html
@@ -72,7 +72,7 @@
         Practical-6: Create following layout using CSS Layout Properties.
     </h1>
     <div class="box">
-        <img src="../Images/html.png" alt="" />
+        <img src="html.png" alt="" />
         <h4>Introduction to HTML</h4>
         <p>
         The HyperText Markup Language, or HTML is the standard markup language for documents designed to be displayed in a web
@@ -84,7 +84,7 @@
         <a href="practical-5-html.html">Read More</a>
     </div>
     <div class="box">
-        <img src="../Images/css.png" alt="" />
+        <img src="css.png" alt="" />
         <h4>Introduction to CSS</h4>
         <p>
             Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a
@@ -96,7 +96,7 @@
         <a href="practical-5-css.html">Read More</a>
     </div>
     <div class="box">
-        <img src="../Images/jquery.png" alt="" />
+        <img src="jquery.png" alt="" />
         <h4>Introduction to JQuery</h4>
         <p>
         jQuery is a JavaScript library designed to simplify HTML DOM tree traversal and manipulation, as well as event handling,
@@ -106,7 +106,7 @@
         <a href="practical-5-jq.html">Read More</a>
     </div>
     <div class="box">
-        <img src="../Images/bootstrap.jpg" alt="" />
+        <img src="bootstrap.jpg" alt="" />
         <h4>Introduction to Bootstrap</h4>
         <p>
         Bootstrap is a free and open-source CSS framework directed at responsive, mobile-first front-end web development. It
