--- a/practical-5-css.html
+++ b/practical-5-css.html
@@ -30,7 +30,7 @@
 
 <body>
   <div>
-    <img src="../Images/css.png" width="500" height="350" alt="" />
+    <img src="css.png" width="500" height="350" alt="" />
 
     <p>
       Cascading Style Sheets, fondly referred to as CSS, is a simply designed language intended to simplify the process of making web pages presentable.
