--- a/practical-5-jq.html
+++ b/practical-5-jq.html
@@ -30,7 +30,7 @@
 
 <body>
   <div>
-    <img src="../Images/jquery.png" width="500" height="350" alt="" />
+    <img src="jquery.png" width="500" height="350" alt="" />
 
     <p>
       jQuery is an open source JavaScript library that simplifies the interactions between an HTML/CSS document, or more precisely the Document Object Model (DOM), and JavaScript.
